# opencode-zotero-plugin

./: .gitignore  AGENTS.md  CONTINUATION.md  GAPS.md  INTERFACE_DESIGN.md  README.md  REQUIREMENTS.md  agents.py  justfile  opencode.json  package.json  tsconfig.json
.config/: opencode.json
.github/workflows/: ci.yml  publish.yml
.pr/: PR_BODY.md
.serena/: project.yml
_dev/: AGENTS.md  README.md  TODO.md  main.py  pyproject.toml  test_adversarial.py  test_arxiv_tools.py  test_tools.py
_dev/docs/: arxiv-connector-investigation.md  connector-research-plan.md  librarian-tasks.md  suggested_commands.md
_dev/scripts/: manage.py
_dev/src/zotero_librarian/: __init__.py
_dev/zotero-connector/: arxiv_translator.js  arxiv_translator_cli.js
mcp-server/: pyproject.toml  server.py
python/: pyproject.toml
python/src/zotero_librarian/: __init__.py  _cli.py  _dispatch.py  analysis.py  arxiv.py  attachments.py  batch.py  cleanup.py  client.py  collections.py  config.yaml  connector.py  duplicates.py  enrichment.py  export.py  import_.py  items.py  lookup.py  notes.py  query.py  settings.py  stats.py  sync.py  tags.py  validation.py
python/tests/: conftest.py  test_adversarial.py  test_arxiv.py  test_dispatch.py  test_enrichment_local_api.py  test_extraction.py  test_lookup.py  test_tools.py  test_validation.py  test_write_contract_local_api.py
src/: index.ts
tests/integration/: opencode.json  zotero-plugin.test.ts
