[project]
name = "zotero-librarian-mcp"
version = "0.1.0"
description = "MCP server for Zotero librarian tools"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.1.0",
    "zotero-librarian",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.uv.sources]
zotero-librarian = { path = "../python", editable = true }
