[project]
name = "zotero-librarian"
version = "0.2.0"
description = "Programmatic Zotero library management"
requires-python = ">=3.13"
dependencies = [
    "pyzotero>=1.10.0",
    "httpx>=0.25.0",
    "rapidfuzz>=3.0.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
arxiv = [
    "arxiv>=2.1.0",
    "python-dateutil>=2.8.2",
    "pymupdf4llm>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_librarian"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "fastmcp>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
zotero-lib = "zotero_librarian._cli:main"
